--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
   font-family: 'Open Sans', sans-serif;
 }
 
+body {
+  background-color: #271b31;
+  color: #ffffff;
+}
+
 header {
   background-color:  #F2F2F2;
   width: 100%;
@@ -16,11 +21,12 @@ header {
   justify-content: space-around;
   align-items: center;
   box-shadow: 1px 1px 10px black;
+  height: 250px;
 }
 
 header img {
-  width: 300px;
-  height: 150px;
+  width: 200px;
+  height: 180px;
 }
 
 a {
@@ -35,7 +41,7 @@ a:hover {
 }
 
 a:visited, a:hover, a:active {
-  color:#f37021;
+  color:black;
 }
 
 nav, ul {
@@ -75,7 +81,6 @@ nav a {
   width: 80%;
   font-size: 50px;
   margin-bottom: 15px;
-  background-color: rgba(255, 255, 255, 0.8);
   padding: 20px;
 }
 
@@ -83,7 +88,6 @@ nav a {
   width: 80%;
   font-size: 25px;
   margin-bottom: 30px;
-  background-color: rgba(255, 255, 255, 0.8);
   padding: 20px;
 }
 
@@ -109,14 +113,14 @@ nav a {
   font-size: 25px;
   margin-bottom: 35px;
   text-align: center;
-  color: black;
+  color: white;
 }
 
 .know-the-farao p {
   max-width: 800px;
   margin-bottom: 35px;
   text-align: center;
-  color: black;
+  color: white;
 }
 
 .know-the-farao hr {
@@ -124,7 +128,7 @@ nav a {
   height: 2px;
   margin-bottom: 70px;
   border: none;
-  background-color: black;
+  background-color: white;
 }
 
 .know-the-farao .grid {
@@ -132,6 +136,14 @@ nav a {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+}
+
+.galery{
+  overflow-x: scroll;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 300px;
 }
 
 .grid img {
@@ -170,7 +182,7 @@ nav a {
   height: 2px;
   margin-bottom: 70px;
   border: none;
-  background-color: white;
+  background-color: #271b31;
 }
 
 .store .grid {
@@ -206,14 +218,14 @@ nav a {
   text-transform: uppercase;
   margin-bottom: 35px;
   text-align: center;
-  color: black;
+  color: white;
 }
 
 .newsletter p {
   max-width: 800px;
   margin-bottom: 35px;
   text-align: center;
-  color: black;
+  color: white;
 }
 
 .newsletter form {
@@ -314,7 +326,7 @@ footer ul li:nth-child(4) {
 
   header img {
     max-width: 500px;
-    width: 300px;
+    width: 200px;
   }
 
   .hero img {
