--- a/style.css
+++ b/style.css
@@ -138,13 +138,51 @@ nav a {
   flex-wrap: wrap;
 }
 
-.galery{
+/* .galery{
   overflow-x: scroll;
   display: flex;
   flex-direction: row;
   width: 100%;
   height: 300px;
+} */
+
+.gallery {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 10px;
 }
+
+.gallery img {
+  width: 100%;
+  height: 450px;
+  object-fit: cover;
+}
+
+.prev,
+.next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: auto;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
 
 .grid img {
   /* margin-right: 50px;
